--- a/webrtc/common_audio/BUILD.gn
+++ b/webrtc/common_audio/BUILD.gn
@@ -98,9 +98,9 @@ rtc_static_library("common_audio") {
     suppressed_configs += [ "//build/config/clang:find_bad_constructs" ]
   }
 
-  if (current_cpu == "x86" || current_cpu == "x64") {
-    deps += [ ":common_audio_sse2" ]
-  }
+  # if (current_cpu == "x86" || current_cpu == "x64") {
+  #   deps += [ ":common_audio_sse2" ]
+  # }
 }
 
 rtc_source_set("common_audio_c") {
@@ -236,32 +236,32 @@ rtc_source_set("sinc_resampler") {
   ]
 }
 
-if (current_cpu == "x86" || current_cpu == "x64") {
-  rtc_static_library("common_audio_sse2") {
-    # TODO(kjellander): Remove (bugs.webrtc.org/6828)
-    # Enabling GN check triggers dependency cycle:
-    #   //webrtc/common_audio:common_audio ->
-    #   //webrtc/common_audio:common_audio_sse2 ->
-    #   //webrtc/common_audio:common_audio
-    check_includes = false
-    sources = [
-      "fir_filter_sse.cc",
-      "resampler/sinc_resampler_sse.cc",
-    ]
+# if (current_cpu == "x86" || current_cpu == "x64") {
+#   rtc_static_library("common_audio_sse2") {
+#     # TODO(kjellander): Remove (bugs.webrtc.org/6828)
+#     # Enabling GN check triggers dependency cycle:
+#     #   //webrtc/common_audio:common_audio ->
+#     #   //webrtc/common_audio:common_audio_sse2 ->
+#     #   //webrtc/common_audio:common_audio
+#     check_includes = false
+#     sources = [
+#       "fir_filter_sse.cc",
+#       "resampler/sinc_resampler_sse.cc",
+#     ]
 
-    if (is_posix) {
-      cflags = [ "-msse2" ]
-    }
+#     if (is_posix) {
+#       cflags = [ "-msse2" ]
+#     }
 
-    if (!build_with_chromium && is_clang) {
-      # Suppress warnings from the Chromium Clang plugin (bugs.webrtc.org/163).
-      suppressed_configs += [ "//build/config/clang:find_bad_constructs" ]
-    }
-    deps = [
-      ":sinc_resampler",
-    ]
-  }
-}
+#     if (!build_with_chromium && is_clang) {
+#       # Suppress warnings from the Chromium Clang plugin (bugs.webrtc.org/163).
+#       suppressed_configs += [ "//build/config/clang:find_bad_constructs" ]
+#     }
+#     deps = [
+#       ":sinc_resampler",
+#     ]
+#   }
+# }
 
 if (rtc_build_with_neon) {
   rtc_static_library("common_audio_neon") {
@@ -276,13 +276,13 @@ if (rtc_build_with_neon) {
       "resampler/sinc_resampler_neon.cc",
     ]
 
-    if (current_cpu != "arm64") {
-      # Enable compilation for the NEON instruction set. This is needed
-      # since //build/config/arm.gni only enables NEON for iOS, not Android.
-      # This provides the same functionality as webrtc/build/arm_neon.gypi.
-      suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
-      cflags = [ "-mfpu=neon" ]
-    }
+    # if (current_cpu != "arm64") {
+    #   # Enable compilation for the NEON instruction set. This is needed
+    #   # since //build/config/arm.gni only enables NEON for iOS, not Android.
+    #   # This provides the same functionality as webrtc/build/arm_neon.gypi.
+    #   suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
+    #   cflags = [ "-mfpu=neon" ]
+    # }
 
     # Disable LTO on NEON targets due to compiler bug.
     # TODO(fdegans): Enable this. See crbug.com/408997.
@@ -315,13 +315,13 @@ if (rtc_build_with_neon) {
       "signal_processing/min_max_operations_neon.c",
     ]
 
-    if (current_cpu != "arm64") {
-      # Enable compilation for the NEON instruction set. This is needed
-      # since //build/config/arm.gni only enables NEON for iOS, not Android.
-      # This provides the same functionality as webrtc/build/arm_neon.gypi.
-      suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
-      cflags = [ "-mfpu=neon" ]
-    }
+    # if (current_cpu != "arm64") {
+    #   # Enable compilation for the NEON instruction set. This is needed
+    #   # since //build/config/arm.gni only enables NEON for iOS, not Android.
+    #   # This provides the same functionality as webrtc/build/arm_neon.gypi.
+    #   suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
+    #   cflags = [ "-mfpu=neon" ]
+    # }
 
     # Disable LTO on NEON targets due to compiler bug.
     # TODO(fdegans): Enable this. See crbug.com/408997.
