--- a/webrtc/modules/audio_coding/BUILD.gn
+++ b/webrtc/modules/audio_coding/BUILD.gn
@@ -775,13 +775,13 @@ if (rtc_build_with_neon) {
       "codecs/isac/fix/source/transform_neon.c",
     ]
 
-    if (current_cpu != "arm64") {
-      # Enable compilation for the NEON instruction set. This is needed
-      # since //build/config/arm.gni only enables NEON for iOS, not Android.
-      # This provides the same functionality as webrtc/build/arm_neon.gypi.
-      suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
-      cflags = [ "-mfpu=neon" ]
-    }
+    # if (current_cpu != "arm64") {
+    #   # Enable compilation for the NEON instruction set. This is needed
+    #   # since //build/config/arm.gni only enables NEON for iOS, not Android.
+    #   # This provides the same functionality as webrtc/build/arm_neon.gypi.
+    #   suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
+    #   cflags = [ "-mfpu=neon" ]
+    # }
 
     # Disable LTO on NEON targets due to compiler bug.
     # TODO(fdegans): Enable this. See crbug.com/408997.
