--- a/webrtc/modules/video_processing/BUILD.gn
+++ b/webrtc/modules/video_processing/BUILD.gn
@@ -9,7 +9,7 @@
 import("//build/config/arm.gni")
 import("../../webrtc.gni")
 
-build_video_processing_sse2 = current_cpu == "x86" || current_cpu == "x64"
+build_video_processing_sse2 = false #current_cpu == "x86" || current_cpu == "x64"
 
 rtc_static_library("video_processing") {
   sources = [
@@ -88,10 +88,10 @@ if (rtc_build_with_neon) {
       ":denoiser_filter",
     ]
 
-    if (current_cpu != "arm64") {
-      suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
-      cflags = [ "-mfpu=neon" ]
-    }
+    # if (current_cpu != "arm64") {
+    #   suppressed_configs += [ "//build/config/compiler:compiler_arm_fpu" ]
+    #   cflags = [ "-mfpu=neon" ]
+    # }
   }
 }
 
